<?xml version="1.0"?>
<package>
  <name>compass</name>
  <version>0.0.0</version>
  <description>The compass launch package for nxt_ros</description>

  <maintainer email="tf220@kent.ac.uk">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nxt_ros</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>nxt_ros</run_depend>
  <run_depend>rospy</run_depend>

</package>
